--- a/src/sass/pages/_factory-details.scss
+++ b/src/sass/pages/_factory-details.scss
@@ -27,6 +27,7 @@ margin-bottom: 1.5rem;
     }
     .search-result-card--md .search-card-contacts-list{
         width: auto;
+        height: 8.938rem;
     }
     .search-result-card--md .social-container .address-header{
         margin-#{$opposite-float}: 0.5rem;
