--- a/src/app/pages/factory-details/factory-details.component.html
+++ b/src/app/pages/factory-details/factory-details.component.html
@@ -18,8 +18,9 @@
                     <h3 class="search-result-card__header">{{getLang()=='ar'?company.nameAr:company.name}}</h3>
                 </div>
                 <div class="search-result-card-details-container" *ngIf="company">
-                    <p class="search-result-card-details__txt">
-                        {{getLang()=='ar'?company.descriptionAr:company.description}}
+                    <p class="search-result-card-details__txt" 
+                    title="{{getLang()=='ar'?company.descriptionAr:company.description}}">
+                        {{getLang()=='ar'?(company.descriptionAr |slice:0:500):(company.description|slice:0:500)}}
                     </p>
                 </div>
                 <div class="search-result-card-contacts-container">
