--- a/src/assets/css/style-rtl.css
+++ b/src/assets/css/style-rtl.css
@@ -7172,6 +7172,14 @@ height: 100%;
       .search-result-card--sm .action-btn:hover {
         background-color: #0E930E;
         color: #fff; }
+        @supports (height: fit-content) {
+          .search-result-card--md {
+            height: fit-content !important;
+            padding: 0.75rem;
+            border-radius: .5rem;
+            width: 102%; }
+
+        }
   .search-result-card--md {
     height: 20.896rem;
     padding: 0.75rem;
@@ -7522,7 +7530,7 @@ height: 100%;
 .swiper-btns-wrapperr {
   position: absolute;
   left: 0;
-  top: -7%; }
+  top: -3%; }
 
 .Ca-swiper-button-next {
   margin-left: 43.5rem; }
@@ -7964,7 +7972,8 @@ li {
   .search-result-card--md .search-result-card-image-container {
     width: 100%; }
   .search-result-card--md .search-card-contacts-list {
-    width: auto; }
+    width: auto; 
+   height: 8.938rem;}
   .search-result-card--md .social-container .address-header {
     margin-left: 0.5rem; }
   .personal-details-container {
@@ -8043,7 +8052,7 @@ li {
   align-items: center;
   margin-bottom: 0; }
   .nav-tabs-container .nav-tab {
-    margin-left: 1.5rem; }
+    margin-left: 2.5rem; }
     .nav-tabs-container .nav-tab a {
       font-size: 1.25rem;
       line-height: 1.5rem;
