fixing sector search bug

--- a/src/app/pages/factories/factories.component.html
+++ b/src/app/pages/factories/factories.component.html
@@ -117,7 +117,8 @@
                </ul>
            </div> -->
        </div>
-   
+       <!-- ; else elseBlock -->
+       <!-- <ng-template #elseBlock>{{'noRes' | translate}}</ng-template> -->
        <!-- <aside class=" side-menue side-menue--left">
            <div class="side-menue-image-container">
                <img class="side-menue__image" src="../assets/images/aside-header-bg.jpg" alt="aside-bg">
