--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -3,7 +3,7 @@
 
  
  <!---------------------------------------------- Pages Shared Bannrr Details----------------------->
- <banner [imageSrc]="'../assets/images/c1.jpg'" >
+ <banner [imageSrc]="'../assets/images/headerBg/Factoriesbg.png'" >
     {{'aboutPortal' | translate }}
 </banner>
 
