commenting navbar search

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -48,8 +48,8 @@
             </li>
   
           </ul>
-          <form class="form-inline my-2 my-lg-0 search-form">
+          <!-- <form class="form-inline my-2 my-lg-0 search-form">
             <input class="form-control mr-sm-2" type="search" placeholder="{{'search' | translate}}">
             <button class="btn btn-outline-success my-2 my-sm-0 w-75" type="submit">{{'search' | translate}}</button>
-          </form>
+          </form> -->
         </div>
