adding city and fix ui bugs

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -33,11 +33,11 @@
     <!--social-media icons-->
      <div class="socialMedia-container" *ngIf="FooterInfo">
         <ul class="socialMedia-list">
-            <li class="socialMedia-icon"><a [href]='FooterInfo.instagram' style="text-decoration: none;"><span  class="icon-Icon-instagram"></span></a></li>
-            <li class="socialMedia-icon"><a [href]='FooterInfo.facebook' style="text-decoration: none;"><span class="icon-Icon-facebook"></span></a></li>
-            <li class="socialMedia-icon"><a [href]='FooterInfo.twitter' style="text-decoration: none;"><span class="icon-Icon-twitter"></span></a></li>
-            <li class="socialMedia-icon"><a [href]='FooterInfo.youTube' style="text-decoration: none;"><span class="icon-Icon-youtube"></span></a></li>
-            <li class="socialMedia-icon"><a [href]='FooterInfo.google' style="text-decoration: none;"><span class="icon-Icon-Gmail"></span></a></li>
+            <li class="socialMedia-icon"><a [href]='FooterInfo.instagram' target="blank" style="text-decoration: none;"><span  class="icon-Icon-instagram"></span></a></li>
+            <li class="socialMedia-icon"><a [href]='FooterInfo.facebook' target="blank" style="text-decoration: none;"><span class="icon-Icon-facebook"></span></a></li>
+            <li class="socialMedia-icon"><a [href]='FooterInfo.twitter' target="blank" style="text-decoration: none;"><span class="icon-Icon-twitter"></span></a></li>
+            <li class="socialMedia-icon"><a [href]='FooterInfo.youTube' target="blank" style="text-decoration: none;"><span class="icon-Icon-youtube"></span></a></li>
+            <li class="socialMedia-icon"><a [href]='FooterInfo.google' target="blank" style="text-decoration: none;"><span class="icon-Icon-Gmail"></span></a></li>
 
         </ul>
     </div>
