--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -52,7 +52,7 @@
 <!--about Section -->
  <section class="about-portal">
    <div class="section-header-container ">
-    <h3 class="headers-txt headers-txt--green mb-0">{{'About' | translate}}</h3>
+    <h3 class="headers-txt headers-txt--green mb-0" style="font-size: 1.7rem;">{{'About' | translate}}</h3>
    </div>
    <div class="container">
     <div class="row">
