--- a/src/app/pages/factory-details/factory-details.component.html
+++ b/src/app/pages/factory-details/factory-details.component.html
@@ -25,9 +25,9 @@
                 </div>
                 <div class="search-result-card-contacts-container">
                     <ul class="search-card-contacts-list">
-                        <li class="search-card-contact "><span>&nbsp;</span><span class="icon-Icon-telephone contact-icon "></span>{{company.phone}}</li>
+                        <li class="search-card-contact " style="display: flex;align-items: center;"><span class="icon-Icon-telephone contact-icon "></span><span style="direction: ltr;">{{company.phone}}</span></li>
                         <li class="search-card-contact" title={{company.email}}>{{company.email|slice:0:19}}<span class="icon-Icon-email contact-icon "></span></li>
-                        <li class="search-card-contact">{{company.fax}}<span class="icon-Icon-print contact-icon "></span></li>
+                        <li class="search-card-contact" style="display: flex;align-items: center;"><span class="icon-Icon-print contact-icon "></span><span style="direction: ltr;">{{company.fax}}</span></li>
                         <li class="search-card-contact" title="{{company.website}}">{{company.website|slice:0:19}}<span class="icon-Icon-globe contact-icon "></span></li>
     
                         
