--- a/src/assets/css/style-rtl.css
+++ b/src/assets/css/style-rtl.css
@@ -7140,7 +7140,9 @@ height: 100%;
     .search-result-card--sm .search-card-contacts-list {
       padding-right:0;
       display: flex;
-      margin: 0; }
+      margin: 0;
+            flex-wrap: wrap;
+       }
     .search-result-card--sm .search-card-contact {
       font-size: .7rem;
       font-family: "NeoSansArabic";
@@ -7530,7 +7532,7 @@ height: 100%;
 .swiper-btns-wrapperr {
   position: absolute;
   left: 0;
-  top: -3%; }
+  top: -6%; }
 
 .Ca-swiper-button-next {
   margin-left: 43.5rem; }
