--- a/src/sass/components/_info-card.scss
+++ b/src/sass/components/_info-card.scss
@@ -43,6 +43,7 @@
             display: flex;
             margin: 0;
             padding-#{$default-float}:0;
+            flex-wrap: wrap;
         }
         .search-card-contact{
             font-size: .7rem;
