--- a/src/app/pages/factories/factories.component.html
+++ b/src/app/pages/factories/factories.component.html
@@ -151,19 +151,19 @@
                </div>
            </div>
        </aside> -->
-       <aside class=" side-menue side-menue--left" *ngIf="AsideFound;else elseAside ">
-        <div class="side-menue-image-container" *ngIf="Aside[1].image != undefined ;else elseImage">
-            <img class="side-menue__image"  [src]="baseImageUrl+Aside[1].image"  alt="aside-bg">
+       <aside class=" side-menue side-menue--left" *ngIf="Aside !=[]  ;else elseAside ">
+        <div class="side-menue-image-container" *ngIf="Aside[0].image;else elseImage">
+            <img class="side-menue__image"  [src]="baseImageUrl+Aside[0].image"  alt="aside-bg">
         </div>
         <ng-template class="side-menue-image-container" #elseImage>
             <img class="side-menue__image" src="../../../assets/images/broken.png" alt="aside-bg">
         </ng-template>
         <div class="side-menue-details">
             <div class="side-menue-details-header-container">
-                <h5 class="side-menue__header">{{getLang()=='ar'?Aside[1].companyNameAr:Aside[1].companyName}}</h5>
+                <h5 class="side-menue__header">{{getLang()=='ar'?Aside[0].companyNameAr:Aside[0].companyName}}</h5>
             </div>
             <div class="side-menue-details-body">
-                <p class="side-menue__details">{{getLang()=='ar'?Aside[1].descriptionAr:Aside[1].description}}</p>
+                <p class="side-menue__details">{{getLang()=='ar'?Aside[0].descriptionAr:Aside[0].description}}</p>
             </div>
         </div>
        </aside>
